# PictureViewer_v2

./: .gitignore  CLAUDE.md  CMakeLists.txt  GUI_TEST_REPORT.md  MACOS_DEPLOYMENT.md  README.md  pyproject.toml  requirements.txt  test_gui_functionality.cpp  update-local.sh
.github/workflows/: ci.yml  macos-build.yml  release.yml  windows-build.yml
build_test/: Makefile  cmake_install.cmake
build_test/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build_test/PictureViewer.app/Contents/: Info.plist
build_test/src/: Makefile  cmake_install.cmake
build_test/src/app/: Makefile  cmake_install.cmake
build_test/src/core/: Makefile  cmake_install.cmake
build_test/src/workers/: Makefile  cmake_install.cmake
cmake/: PictureViewerInfo.plist.in  entitlements.plist
docs/: TODO.md  dokumentace.md
installer/: setup.iss
resources/: PictureViewer.rc  resources.qrc
scripts/: build-macos-app.sh
src/: CMakeLists.txt  main.cpp
src/app/: Application.cpp  Application.hpp  CMakeLists.txt  CategoryDialogs.cpp  CategoryDialogs.hpp  CategoryManager.cpp  CategoryManager.hpp  ClipboardHelper.cpp  ClipboardHelper.hpp  ClipboardHelper_mac.mm  FileRetry.hpp  HelpDialog.cpp  HelpDialog.hpp  ImageLoader.cpp  ImageLoader.hpp  ImageView.cpp  ImageView.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow_FileOps.cpp  MainWindow_FolderNav.cpp  MainWindow_Labels.cpp  MainWindow_Layout.cpp  MainWindow_Move.cpp  MainWindow_Profiles.cpp  MainWindow_Toolbar.cpp  MetadataPanel.cpp  MetadataPanel.hpp  MoveDialogs.cpp  MoveDialogs.hpp  PredefinedColors.hpp  ProfileManager.cpp  ProfileManager.hpp  ScreenCapture.cpp  ScreenCapture.hpp  ScreenCapture_mac.mm  SettingsManager.cpp  SettingsManager.hpp  SlideshowController.cpp  SlideshowController.hpp  (+10 more)
src/core/: CMakeLists.txt  Collation.hpp  CompanionFinder.cpp  CompanionFinder.hpp  FolderNavigator.cpp  FolderNavigator.hpp  ImageCatalog.cpp  ImageCatalog.hpp  ImageFormats.hpp  ImageInfo.hpp  ImageMetadataReader.cpp  ImageMetadataReader.hpp  PdfHandler.cpp  PdfHandler.hpp
src/picture_viewer/: __main__.py  app.py  image_loader.py  image_view.py  main.py  main_window.py  slideshow.py  thumbnail_panel.py  thumbnail_worker.py
src/workers/: CMakeLists.txt  FolderNavWorker.cpp  FolderNavWorker.hpp  FolderScanWorker.cpp  FolderScanWorker.hpp  ThumbnailWorker.cpp  ThumbnailWorker.hpp  VideoThumbnailWorker.cpp  VideoThumbnailWorker.hpp
tests/: CMakeLists.txt  test_core.cpp
tests/unit/: test_image_loader.py  test_slideshow.py
