[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "picture-viewer"
version = "0.1.0"
description = "Multiplatformní prohlížeč obrázků s GUI"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6",
    "Pillow>=10.0",
]

[project.scripts]
picture-viewer = "picture_viewer.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
