set(APP_SOURCES
    Application.hpp
    Application.cpp
    HelpDialog.hpp
    HelpDialog.cpp
    ImageLoader.hpp
    ImageLoader.cpp
    MainWindow.hpp
    MainWindow.cpp
    MetadataPanel.hpp
    MetadataPanel.cpp
    ImageView.hpp
    ImageView.cpp
    ThumbnailPanel.hpp
    ThumbnailPanel.cpp
    SlideshowController.hpp
    SlideshowController.cpp
    SettingsManager.hpp
    SettingsManager.cpp
    ThumbnailCacheManager.hpp
    ThumbnailCacheManager.cpp
    VlcController.hpp
    VlcController.cpp
)

add_library(picture_viewer_app OBJECT ${APP_SOURCES})
target_include_directories(picture_viewer_app
    PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}/..
    PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR}
)
target_link_libraries(picture_viewer_app
    PUBLIC
        Qt6::Core
        Qt6::Concurrent
        Qt6::Gui
        Qt6::Widgets
        Qt6::Network
)
